fix: reset modal and backdrop z-index

--- a/components/common/molecules/Modal/Modal.module.scss
+++ b/components/common/molecules/Modal/Modal.module.scss
@@ -9,7 +9,7 @@
   left: 50%;
   top: 20vh;
   transform: translateX(-50%);
-  z-index: 2;
+  z-index: 4;
 
   display: flex;
   flex-direction: column;
